[metadata]
name = pytest-inmanta-lsm
version = 3.2.3

dev_tag = dev0
[flake8]
# H101 Include your name with TODOs as in # TODO(yourname). This makes it easier to find out who the author of the comment was.
# H302 Do not import objects, only modules DEPRICATED
# H404 Multi line docstrings should start without a leading new line.
# H405 multi line docstring summary not separated with an empty line
# H301 Do not import more than one module per line (*)
# H306 Alphabetically order your imports by the full module path.
# E203 whitespace before ':' " on list slice.
# E266 too many leading ‘#’ for block comment
# E252 missing whitespace around parameter equals
# F722 syntax error in forward annotation
# W503 line break before binary operator
# Note: E203 whitespaces and the slice operator. black and flake disagree
# Note: F722 because many inmanta types are seen as forward declarations
ignore = H405,H404,H302,H306,H301,H101,E252,E203,F722,W503

# These inmanta primitive types will throw F821 in annotations
# see: http://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-builtins
builtins=string,number,bool
max-line-length = 128
exclude = **/.env,venv
copyright-check=True
copyright-author=Inmanta
copyright-regexp=:copyright:\s+(\(C\)\s+)?\d{4}([-,]\d{4})*\s+Inmanta
# make sure projects in examples dir are never considered as separate projects rather than depending on how check is invoked
black-config=pyproject.toml

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
# Black splits up import statements that are too long
# Setting isorts line_length to 88 (blacks default) so they do not collide
line_length=88
known_first_party=pytest_inmanta_lsm
known_third_party=pytest,ncdiff,pytest_inmanta

[black]
line-length=128
target-version = 'py36', 'py37', 'py38'
