[metadata]
name = inmanta-module-quickstart
freeze_recursive = False
freeze_operator = ~=
version = 0.1
license = Test
four_digit_version = False

[options]
install_requires = inmanta-module-lsm
	inmanta-module-std
zip_safe = False
include_package_data = True
packages = find_namespace:

[options.packages.find]
include = inmanta_plugins*

