[metadata]
name = inmanta-module-test-partial
version = 0.0.1
description = Test module that supports partial compiles.
author = Inmanta
author_email = code@inmanta.com
license = ASL 2.0
copyright = 2022 Inmanta

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
    inmanta-module-std>=3.1
    inmanta-module-lsm>=2.19

[options.packages.find]
include = inmanta_plugins*
